# motor_stand

./: CMakeLists.txt  LICENSE  README.md  build.sh  out  rocket_test_stand_data.c  save
logs_oct4_2025/: launch1.gnuplot  launch1_gunpowder.gnuplot  launch1_gunpowder.txt  launch2.gnuplot  launch2.txt  launch3.gnuplot  launch3.txt
logs_oct4_2025/raw/: output.adjust.txt  output.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.adjust.txt  output6.txt  output6_high.txt  output7.txt  output_high.txt  output_high_new.adjust.txt  output_new.adjust.txt
pi/: ScaleWithMenu.ino  esp-32LoadCellInit
src/: adc.h  ads1115.c  ads1115.h  gpio_compat.c  gpio_compat.h  hx711.c  hx711.h  load_cell.h  load_cell_actor.c  load_cell_calibration.c  load_cell_cli.c  load_cell_cli.h  load_cell_cli_stub.c  load_cell_logger.c  load_cell_serv.c  method_of_least_squares.c  method_of_least_squares.h  numerical_basics.c  numerical_basics.h  output_rewrite.c  pi_test.c  teststandui.c
